<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:inputType="numberDecimal"
        android:hint="@string/distancia"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Total de km"/>


    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"
        android:hint="@string/preco"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/preco_por_litro"/>



    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomia"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="km/L"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gosto_total"/>

    <TextView
        android:id="@+id/textTotalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/rs_valor"/>


    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        android:textSize="20sp"
        android:text="CALCULAR"/>




</LinearLayout>